@@ -8,6 +8,7 @@ password = S97xDJp9hYQyMn6kY6d3cYUS38QFueJ989rr4Fe7a7Pj6eQcYar2AmA99CzkPQFV
 [server]
 host = 127.0.0.1
 port = 8080
+username =
 
 [log]
 handler = FileHandler
