@@ -1,7 +1,0 @@
-<runner>
-  program bin/paster serve deploy.ini
-  daemon on
-  socket-name var/zdaemonsock
-  # Enable this to run the child process as a different user
-  # user zope
-</runner>
